k8s/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: student-j-donnerbauer
  labels:
    app: keycloak
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: keycloak
  type: LoadBalancer
